<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/workout"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_access_alarm_24"
            android:title="Events" />
    </group>

</menu>